# bltznxt

./: .gitignore  Buglist.md  CMakeLists.txt  DEVLOG.md  LICENSE  Makefile  README.md  REFACTOR.md  ROADMAP_TO_1.0.md  build_linux.sh  build_windows.bat  roadmap.md  setup.bat
.claude/: settings.local.json
examples/: demo_lighting.bb  hello.bb  minimal.bb  simple.bb  test_assign.bb  test_const.bb  test_control_flow.bb  test_coords.bb  test_data.bb  test_dim.bb  test_empty_func.bb  test_error.bb  test_features.bb  test_final.bb  test_float_call.bb  test_float_lit.bb  test_float_no_paren.bb  test_float_tag.bb  test_func.bb  test_include.bb  test_input.bb  test_int_param.bb  test_int_tag.bb  test_overload_call.bb  test_overload_def.bb  test_print_float.bb  test_scoping.bb  test_single.bb  test_string_concat.bb  test_types.bb  test_types_full.bb  window.bb
examples/asteroids/: asteroids.bb
examples/basic/: basic.bb  basic.cpp
examples/bnb/: blox-n-balls.bb
scripts/: build.py  common.py  package.py  setup.py
src/: blitzcc_main.cpp  commands.def  test_wrapper.cpp
src/compiler/: ast.h  bb_bank.h  bb_file.h  bb_graphics2d.h  bb_image.h  bb_input.h  bb_math.h  bb_runtime.h  bb_sdl.h  bb_sound.h  bb_sound3d.h  bb_string.h  bb_system.h  blitzcc.cpp  emitter.h  lexer.h  parser.h  preprocessor.h  token.h
src/config/: config.vcxproj
src/runtime/: api.h  bb_arith.cpp  bb_arith.h  bb_audio.cpp  bb_bank.cpp  bb_camera.cpp  bb_camera.h  bb_collisions.cpp  bb_data.cpp  bb_data.h  bb_entity_ctrl.cpp  bb_entity_ctrl.h  bb_entity_move.cpp  bb_entity_move.h  bb_entity_state.cpp  bb_entity_state.h  bb_file.cpp  bb_font.cpp  bb_globals.cpp  bb_globals.h  bb_graphics.cpp  bb_graphics.h  bb_input.cpp  bb_input.h  bb_light.cpp  bb_light.h  bb_math.h  bb_mesh.cpp  bb_mesh.h  bb_render.cpp  bb_render.h  bb_string.cpp  bb_system.cpp  bb_system.h  bb_timer.cpp  bb_types.h  default_font.h  runtime.cpp
src/stdutil/: stdutil.cpp  stdutil.vcxproj
src/transpiler/: codegen.h  cpp_generator.cpp  cpp_generator.h  decl.cpp  decl.h  declnode.cpp  declnode.h  environ.cpp  environ.h  ex.h  exprnode.cpp  exprnode.h  label.h  main.cpp  memory.cpp  memory.h  node.cpp  node.h  nodes.h  parser.h  (+13 more)
tests/: bad.bb  hello.bb  lexer_test.bb  neg_missing_next.bb  neg_missing_wend.bb  neg_unclosed_if.bb  neg_unclosed_string.bb  overload_test.bb  regress_basic.bb  regress_basic.expected  run_tests.py  run_tests.sh  test_abs.bb  test_apptitle.bb  test_arrays.bb  test_arrays.expected  test_autores.bb  test_camera.bb  test_camera_project.bb  test_collisions_hierarchy.bb  test_collisions_mesh.bb  test_collisions_query.bb  test_collisions_slide.bb  test_collisions_sphere.bb  test_const.bb  test_const.expected  test_conversion.bb  test_core.bb  test_data.bb  test_data.expected  test_delete.bb  test_delete.expected  test_filesystem.bb  test_fixes.bb  test_fixes.expected  test_flow.bb  test_font.bb  test_fonts.bb  test_fullscreen.bb  test_gfx_2d.bb  (+78 more)
(+40 files in other folders)
